--- a/views/index.html
+++ b/views/index.html
@@ -27,11 +27,11 @@
 						<a class="hiddenanchor" id="tologin"></a>
 						<div id="wrapper">
 						   <div id="login" class="animate form">
-							  <form method="POST"  action="/insert" autocomplete="on"> 
+							  <form method="POST"  action="/LOGIN" autocomplete="on"> 
 								 <h1>Log in</h1> 
 								 <p> 
 								 <label for="username" class="uname" data-icon="u" > Your email or username </label>
-								 <input id="username" name="username" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
+								 <input id="username" name="username" required="required" type="text" placeholder="myusername"/>
 								 </p>
 								 <p> 
 								 <label for="password" class="youpasswd" data-icon="p"> Your password </label>
@@ -52,15 +52,11 @@
 						   </div>
 
 						   <div id="register" class="animate form">
-							  <form  action="mysuperscript.php" autocomplete="on"> 
+							  <form  method="POST" action="/SIGNUP" autocomplete="on"> 
 								 <h1> Sign up </h1> 
 								 <p> 
 								 <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
 								 <input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
-								 </p>
-								 <p> 
-								 <label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
-								 <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="mysupermail@mail.com"/> 
 								 </p>
 								 <p> 
 								 <label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
